# credit_card_customer_churn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
credit_card_app/: my_app.py
jupyter/: credit_card_attrition_Machine_Learning.ipynb
